fix navbar to collapse

--- a/ticketing/frontend/my-app/src/App.css
+++ b/ticketing/frontend/my-app/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+.collapse:not(.show) {
+  display: none;
+  flex-grow: unset!important;
+}
